Changes on alpaha-beta

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
+    "@smui/button": "^6.0.0-beta.14",
+    "@smui/common": "^6.0.0-beta.14",
+    "@smui/segmented-button": "^6.0.0-beta.14",
     "@smui/slider": "^6.0.0-beta.14",
     "@tsconfig/svelte": "^2.0.0",
     "rollup": "^2.3.4",
